--- a/templates/message.html
+++ b/templates/message.html
@@ -14,25 +14,72 @@
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
+
+    <style>
+      botton {
+        background-color: grey;
+      }
+    </style>
   </head>
+
   <body>
     <div class="parent">
       <div class="child-2">
+        <div
+          style="
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+
+            border-radius: 5px;
+          ">
+          <!-- Button to navigate to the previous page -->
+          <button
+            style="
+              cursor: pointer;
+              background-color: #212121;
+              padding: 10px;
+              color: #fafafa;
+              border-width: 0px;
+              border-radius: 3px;
+            "
+            onclick="window.history.back()">
+            Back
+          </button>
+
+          <!-- Button to navigate to the accounts page -->
+          <a href="{% url 'account' %}" style="text-decoration: none">
+            <button
+              style="
+                cursor: pointer;
+                background-color: green;
+                padding: 10px;
+                color: #fafafa;
+                border-width: 0px;
+                border-radius: 3px;
+              ">
+              profile
+            </button>
+          </a>
+        </div>
+
         <center><h2>Chats</h2></center>
         <hr />
+
         <div class="chat-body-parent">
           <div class="chat-body" id="tasks">
             <div class="message">
               <!-- received messages and displayed here -->
-              {% for i in messages %} {% if i.sender != user %}
+              {% for message in messages %} {% if message.sender != user %}
               <div class="receive">
-                <p style="color: ">
-                  {{i.message}}<strong>  ---{{i.sender}}</strong>
+                <p style="color: #000">
+                  {{ message.message }}<strong> ---{{ message.sender }}</strong>
                 </p>
               </div>
               {% else %}
               <div class="send">
-                <p style="color: #000">{{i.message}}</p>
+                <p style="color: #000">{{ message.message }}</p>
               </div>
               {% endif %} {% endfor %}
               <!-- end receive messages -->
@@ -55,6 +102,6 @@
         </div>
       </div>
     </div>
+    <script src="{% static 'mainn.js' %}"></script>
   </body>
-  <script src="{% static 'mainn.js' %}"></script>
 </html>
